--- a/index.html
+++ b/index.html
@@ -11,9 +11,34 @@
   <body>
     <div class="container">
         <h1 class="jumbotron">Quantity Banky</h1>
-        <form>
-            <button type="submit" class="btn">Order Ticket</button>
+        <form id="account-setup" class="well">
+          <div class="form-group">
+            <label for="first-name">Your Name:</label>
+            <input type="text" class="form-control" id="first-name">
+          </div>
+          <div class="form-group">
+            <label for="init-deposit">Initial Deposit:</label>
+            <input type="number" class="form-control" id="init-deposit">
+          </div>
+          <button type="submit" class="btn">Open Account</button>
         </form>
+        <form id="operations" class="well">
+          <div class="form-group">
+            <label for="deposit">Deposit:</label>
+            <input type="number" class="form-control" id="deposit">
+          </div>
+          <div class="form-group">
+            <label for="withdrawal">Withdrawal:</label>
+            <input type="number" class="form-control" id="withdrawal">
+          </div>
+          <button type="submit" class="btn">Calculate</button>
+        </form>
+        <div class="well">
+          <h3>Current Balance:</h3>
+          <h2></h2>
+        </div>
+
+
     </div>
   </body>
 </html>
