Add logic to add and subtract, and return current balance

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <label for="init-deposit">Initial Deposit:</label>
             <input type="number" class="form-control" id="init-deposit">
           </div>
-          <button type="submit" class="btn">Open Account</button>
-        </form>
-        <form id="operations" class="well">
+          <!-- <button type="submit" class="btn">Open Account</button> -->
+        <!-- </form>
+        <form id="operations" class="well"> -->
           <div class="form-group">
             <label for="deposit">Deposit:</label>
             <input type="number" class="form-control" id="deposit">
